--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -67,7 +67,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    animation: cardFloat 6s ease-in-out infinite;
+    /* animation: cardFloat 6s ease-in-out infinite; */
+    background-color: white ;
 }
 
 @keyframes cardFloat {
@@ -95,6 +96,7 @@
     font-size: 16px;
     color: #2c3e50;
     transition: all 0.4s ease;
+    border: #2c3e50 1px solid;
 }
 
 .id-and-pass:focus {
